third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_reference_to_args_flipped.exp

Diagnostics:
error: invalid call of `move_to`: expected `&signer` but found `M::R` for argument 1
  ┌─ tests/checking/typing/v1-signer/move_to_reference_to_args_flipped.move:4:20
  │
4 │         move_to<R>(R { f: false }, s)
  │                    ^^^^^^^^^^^^^^

error: invalid call of `move_to`: expected `&signer` but found `N::R<bool>` for argument 1
   ┌─ tests/checking/typing/v1-signer/move_to_reference_to_args_flipped.move:14:26
   │
14 │         move_to<R<bool>>(R { f: false }, s);
   │                          ^^^^^^^^^^^^^^
